src/objects/Competitor__c.object
<CustomObject>
    <description>This object will be used to house competitor specific information.</description>
    <fields>
        <fullName>Application_Use_Serviced__c</fullName>
        <label>Application Use Serviced</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Type__c</fullName>
        <label>Competitor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flow Instrumentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Categories_Available__c</fullName>
        <label>Product Categories Available</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEACON AMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Fluid Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition / Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Series Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibration Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Calibrator Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Galaxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Oval Gear (IOG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModMAG M-Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitors / Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ORION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReadCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valves (RCV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services/Technical Field Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco Tool</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Markets__c</fullName>
        <label>Target Markets</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Competitor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Competitor_Type__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Target_Markets__c</columns>
        <columns>Strengths__c</columns>
        <columns>Weaknesses__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Phone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Competitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>